<resources>
    <string name="app_name">Taxi</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">lorem</string>
    <string name="title_activity_drider_maps">Map</string>
    <string name="title_activity_passanger_maps">Map</string>
    <string name="title_activity_making_taxi_order">Map</string>
    <string name="title_activity_order_guide">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_driver_point_the_maps">Map</string>
    <string name="title_activity_sos_dot_maps">Map</string>
    <string name="title_activity_client_map">Map</string>
    <string name="title_activity_status_order_maps">Map</string>
    <string name="title_activity_registration_new_driver">RegistrationNewDriverActivity</string>
    <string name="title_activity_route_from_history" translatable="false">Map</string>
    <string name="inf_location_setting">Adjust location settings on your device</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server">Server</string>
    <string name="title_app">Taxi</string>
    <string name="client">Client</string>
    <string name="report_day">Report for the day</string>
    <string name="char_num">№</string>
    <string name="started">Start</string>
    <string name="route">Route</string>
    <string name="currency">Currency</string>
    <string name="time_">Time (hh:mm)</string>
    <string name="feild_dot_find_address">call sign/name</string>
    <string name="t_driver">"Driver: "</string>
    <string name="t_name">"Name: "</string>
    <string name="t_phone">"Phone: "</string>
    <string name="t_priority">"Priority: "</string>
    <string name="t_callsign">"Call sign: "</string>
    <string name="t_deposit">"Deposit: "</string>
    <string name="t_additional">"Additionally: "</string>
    <string name="hint_additional">additional information</string>
    <string name="t_model">"Model: "</string>
    <string name="t_color">"Colour: "</string>
    <string name="t_reg_num">"Number: "</string>
    <string name="t_dislocation">"Dislocation: "</string>
    <string name="t_criteria">"Criteria: "</string>
    <string name="save">Save</string>
    <string name="satellites">satellites</string>
    <string name="menu">Menu</string>
    <string name="drv_map_free">free (0)</string>
    <string name="drv_map_assigned">assigned (0)</string>
    <string name="t_from">"Where from: "</string>
    <string name="t_to">"Where to: "</string>
    <string name="t_note">"Note: "</string>
    <string name="amount_">"Service fee: "</string>
    <string name="debug_amount">It is recommended to set the real amount, as this affects the driver s interest in the current order.</string>
    <string name="provider_">"Company: "</string>
    <string name="default_provider">by default</string>
    <string name="t_rate">"Rate: "</string>
    <string name="next">Continue</string>
    <string name="cancel2">Cancel</string>
    <string name="t_order">"Order: "</string>
    <string name="guide_value_km">" 0.0 km."</string>
    <string name="guide_rate_not_define">tariff is not defined</string>
    <string name="arrive">Drove up</string>
    <string name="close">Close</string>
    <string name="t_provider">"Provider: "</string>
    <string name="t_type">"Type: "</string>
    <string name="to_client">"To the client: "</string>
    <string name="refuse">Reject</string>
    <string name="rates_new">New…</string>
    <string name="t_host">"Host: "</string>
    <string name="request_hint_load">data is loaded from settings</string>
    <string name="t_transport">"Transport: "</string>
    <string name="criteria_tr">"Transport criterion: "</string>
    <string name="send">send</string>
    <string name="ok">OK</string>
    <string name="sell_point_hint">city, street, house</string>
    <string name="sell_point_route">Route-</string>
    <string name="srv_owner">Owner s name</string>
    <string name="drivers">Drivers</string>
    <string name="report">Report…</string>
    <string name="orders">Orders</string>
    <string name="report_m">report…</string>
    <string name="map_h">Map</string>
    <string name="auto_distribution">Auto distribution</string>
    <string name="create_">Create…</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="from2">From</string>
    <string name="up">To</string>
    <string name="start">Start</string>
    <string name="accepted">Accepted</string>
    <string name="completed">Completed</string>
    <string name="state">State</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="total_">total: 0</string>
    <string name="create">Create</string>
    <string name="report_h">"Report: "</string>
    <string name="rows_">records - 0</string>
    <string name="delete_">Clear…</string>
    <string name="srv_sett_access">Server access:</string>
    <string name="t_caption">"Title: "</string>
    <string name="name_m">Name</string>
    <string name="hint_password">Password</string>
    <string name="srv_sett_debug_available">Can accept third-party orders</string>
    <string name="srv_sett_available_note">When this option is selected, the client will be able to send the order to this server.</string>
    <string name="work">"Working: "</string>
    <string name="services">"Types of services: "</string>
    <string name="connected_to_srv">"Server connection: "</string>
    <string name="auto_connect">Auto connect</string>
    <string name="debug_auto_connect">Registration of a driver with transport takes place without your participation. All driver data is stored on the server.</string>
    <string name="proscribe">Do not accept connection requests.</string>
    <string name="work_shift">"Work shift: "</string>
    <string name="period_h">"Period(hour): "</string>
    <string name="t_work_rate">"Contribution: "</string>
    <string name="title_assign_to_order">Appointment of a driver to order:</string>
    <string name="title_accumulation_drv">Period for collecting drivers to order (sec.):</string>
    <string name="title_wait">Wait for the driver to accept the order (sec.):</string>
    <string name="unknown">unknown</string>
    <string name="t_server">"Server: "</string>
    <string name="btn_create_over">Create / Goto…</string>
    <string name="autorun">Autorun</string>
    <string name="connect_to_provider">"Connection to provider: "</string>
    <string name="hint_no_data">there is no data</string>
    <string name="t_locale">"Localization: "</string>
    <string name="t_language">"Language: "</string>
    <string name="t_currency">"Currency: "</string>
    <string name="personal_data">"Personal data: "</string>
    <string name="color">"Colour: "</string>
    <string name="debug_edit_transport">Attention! \n When the transport data changes, the connection with the connected providers will be lost!</string>
    <string name="radius_">"Radius(m.): "</string>
    <string name="bell">"Sound: "</string>
    <string name="voice">At the end of the trip, announce the amount</string>
    <string name="notification">Sound alert</string>
    <string name="access_to_host">Access to the current host:</string>
    <string name="debug_password_off_sos">Prompt for a password when the SOS signal is turned off</string>
    <string name="auth">Authentication</string>
    <string name="email">Email</string>
    <string name="hint_confirm_password">Password confirmation</string>
    <string name="sign_in_up">Login/Registration</string>
    <string name="signup">Registration</string>
    <string name="date">Date</string>
    <string name="complete">Completed</string>
    <string name="amount">Sum</string>
    <string name="stop">Stop</string>
    <string name="distance_">"Distance: "</string>
    <string name="find_auto_">car search…</string>
    <string name="time_m">"time: "</string>
    <string name="msg">message</string>
    <string name="close_m">close</string>
    <string name="name_srv">"Server name: "</string>
    <string name="wait_answer">Waiting for a response</string>
    <string name="time_passed">00:00 passed</string>
    <string name="caption_m">title</string>
    <string name="text_km">"km: "</string>
    <string name="debug_min_wait">"1 minute (waiting): "</string>
    <string name="debug_speed_wait">waiting - \nspeed less than m / s</string>
    <string name="fix_amount">"fixed amount: "</string>
    <string name="hour_rate">"hourly rate: "</string>
    <string name="change_password">Password change</string>
    <string name="old_password">"old password: "</string>
    <string name="new_password">"new password: "</string>
    <string name="t_password">"Password: "</string>
    <string name="remember">Remember</string>
    <string name="title_rate">name of the tariff</string>
    <string name="start_amount">"initial amount: "</string>
    <string name="hour_payment">"hourly payment: " </string>
    <string name="title_srv">Server name</string>
    <string name="state2">condition…</string>
    <string name="debug_state_unknown">work shift - status unknown</string>
    <string name="debug_no_connected">not connected to the server</string>
    <string name="sos">SOS</string>
    <string name="state_unknown">state unknown</string>
    <string name="shift_close">"shift closed "</string>
    <string name="server_name">Server name</string>
    <string name="not_communication">No connection</string>
    <string name="show_m">show</string>
    <string name="detailed">More detailed</string>
    <string name="btn_driver">Driver</string>
    <string name="redirected">Redirected to another driver!</string>
    <string name="where_to">"Where to: "</string>
    <string name="cmd_message">Message…</string>
    <string name="cmd_canceled">Cancel</string>
    <string name="cmd_show_to_map">Show on map</string>
    <string name="to_call">Phone</string>
    <string name="cmd_blocked">Block</string>
    <string name="cmd_debug_driver">About driver</string>
    <string name="cmd_unlock">Unlock</string>
    <string name="cmd_info_route">About the route</string>
    <string name="cmd_complete_order">Complete the order</string>
    <string name="cmd_msg_to_client">Message to the client</string>
    <string name="cmd_cancel_order">Cancel the order</string>
    <string name="cmd_navigator">Navigator</string>
    <string name="cmd_to_server">Message to the server</string>
    <string name="redirect_order">Redirect order…</string>
    <string name="cmd_send_to_drv">Send to the driver…</string>
    <string name="cmd_send_to_everyone">Send to everyone</string>
    <string name="route_history">Route history</string>
    <string name="loading">loading…</string>
    <string name="settings_srv">Server Settings</string>
    <string name="accept2">Automatically accept orders</string>
    <string name="debug_accept_order">The customer order is accepted without confirmation.</string>
    <string name="type_activity">Type of activity:</string>
    <string name="debug_new_srv">Attention!\n This information is used when connecting transport drivers, as well as when placing an order by the customer.</string>
    <string name="contact_phone">Contact phone number:</string>
    <string name="hint_not_specified">not specified</string>
</resources>