<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".server.activity.ServerSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <TextView
            android:id="@+id/tvTitleSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/settings_srv"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitleNameSrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/t_caption"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvNameSrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:hint="@string/loading"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textStyle="bold" />

        <com.alexei.taxiapp.MultiSpinner
            android:id="@+id/msTypesServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/listTypesServices" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPhoneSrvSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_not_specified"
            android:inputType="phone"
            android:maxLength="15" />

        <CheckBox
            android:id="@+id/chkAvailableForClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srv_sett_debug_available" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srv_sett_available_note" />

        <CheckBox
            android:id="@+id/chkAutoAcceptOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/accept2" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_accept_order" />

        <TextView
            android:id="@+id/tvConnToSrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/connected_to_srv"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkAutoConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_connect" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_auto_connect" />

        <CheckBox
            android:id="@+id/chkDisableRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/proscribe" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/work_shift"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period_h"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etShiftHoursCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:text="24" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_work_rate"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRateShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:selectAllOnFocus="true"
            android:text="0.0" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/title_assign_to_order"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_emergency_24"
            android:text="@string/title_accumulation_drv"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etWaitAccumulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="1"
            android:selectAllOnFocus="true"
            android:text="4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_emergency_24"
            android:text="@string/title_wait"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etWaitAcceptOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true"
            android:text="10" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/t_rate"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCountRates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_" />

            <Button
                android:id="@+id/btnRates"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAllCaps="false" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/report_h"
            android:textColor="@color/colorDarkerAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSizeReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rows_" />

            <Button
                android:id="@+id/btnClearReport"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_"
                android:textAllCaps="false" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dtnSettingCancel"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/close" />

            <Button
                android:id="@+id/dtnSave"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>